Curve cache not created - crash with production file #74984

Closed
opened 2020-03-20 21:23:50 +01:00 by Dalai Felinto · 7 comments

Blender Version
Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-19 21:12, hash: d2c3544c5c

Short description of error

Crash in a file that has a curve modifier and is linked and proxified into another one. The system is a bit fragile. For example, if you open pram.blend and delete the driver, the issue goes away.

Exact steps for others to reproduce the error
Open //scenes/assembly/coffeerun.assembly.blend

coffee-v2.zip

It contains the following super simplified files:

  • //scenes/assembly/coffeerun.assembly.blend
  • //lib/props/pram.blend
  • //lib/sets/cafe.blend
  • //lib/sets/city.blend
**Blender Version** Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-19 21:12, hash: `d2c3544c5c` **Short description of error** Crash in a file that has a curve modifier and is linked and proxified into another one. The system is a bit fragile. For example, if you open `pram.blend` and delete the driver, the issue goes away. **Exact steps for others to reproduce the error** Open `//scenes/assembly/coffeerun.assembly.blend` [coffee-v2.zip](https://archive.blender.org/developer/F8418521/coffee-v2.zip) It contains the following super simplified files: * `//scenes/assembly/coffeerun.assembly.blend` * `//lib/props/pram.blend` * `//lib/sets/cafe.blend` * `//lib/sets/city.blend`
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Sergey Sharybin was assigned by Dalai Felinto 2020-03-20 21:24:57 +01:00
Author
Owner

Added subscribers: @eyecandy, @Hjalti

Added subscribers: @eyecandy, @Hjalti
Author
Owner

Added subscriber: @fclem

Added subscriber: @fclem
Author
Owner

On a related note, @fclem why do you have drw_batch_cache_generate_requested as the key to the free function? (on draw_manager.c:666)

Crash: //source/blender/draw/intern/draw_cache_impl_curve.c:109:23: runtime error: member access within null pointer of type 'const struct CurveCache'
Full backtrace: P1311

GEO-pines.004 refers to CRV-pines_path (via curve modifier), and CRV-pines_path->runtime.curve_cache is NULL when it shouldn't be.

On a related note, @fclem why do you have `drw_batch_cache_generate_requested` as the key to the free function? (on `draw_manager.c:666`) Crash: `//source/blender/draw/intern/draw_cache_impl_curve.c:109:23: runtime error: member access within null pointer of type 'const struct CurveCache'` Full backtrace: [P1311](https://archive.blender.org/developer/P1311.txt) `GEO-pines.004` refers to `CRV-pines_path` (via curve modifier), and `CRV-pines_path->runtime.curve_cache` is NULL when it shouldn't be.

This issue was referenced by ed386507e1

This issue was referenced by ed386507e19543decf2422e96610284da8c98112

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74984
No description provided.