source/blender/depsgraph/intern/builder/deg_builder_nodes.h
@@ -164,6 +164,7 @@ class DepsgraphNodeBuilder : public DepsgraphBuilder {
                             bool is_visible);
   virtual void build_object_proxy_from(Object *object, bool is_object_visible);
   virtual void build_object_proxy_group(Object *object, bool is_object_visible);
+  virtual void build_object_instance_collection(Object *object, bool is_object_visible);
   virtual void build_object_flags(int base_index,
                                   Object *object,
                                   eDepsNode_LinkedState_Type linked_state);
